@@ -1,5 +1,8 @@
 Changes with Apache 1.3.21
 
+  *) PORT: Some Cygwin changes, esp. improvements for dynamic loading,
+     and cleanups. [Stipe Tolj <tolj@wapme-systems.de>]
+
   *) Win32 SECURITY: The default installation could lead to mod_negotiation
      and mod_dir/mod_autoindex displaying a directory listing instead of
      the index.html.* files, if a very long path was created artificially
@@ -23,8 +26,6 @@ Changes with Apache 1.3.21
 
   *) mod_proxy - close origin server connection when client aborts
      [Alexey Panchenko <panchenko@liwest.ru>] PR#8067,7383,6585
-
-  *) PORT: Some Cygwin changes. [Stipe Tolj <tolj@wapme-systems.de>]
 
   *) ErrorDocument 404 pointing to a parsed html file with a
      <!--#include virtual="file" --> with a request URI containing
